# do

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  pyproject.toml  sample.env
.github/workflows/: dependency-update.yml
internal/commands/: catbox.go  clone.go  inline.go  load.go  music.go  mybots.go  ping.go  snap.go  start.go  stats.go  youtube.go
internal/config/: config.go
internal/database/: mongo.go
internal/httpx/: catbox.go  client.go  dl.go  myinstants.go  regexs.go  utils.go  yt_post.go
src/: __init__.py  config.py
src/modules/: _fsub.py  _media_utils.py  _utils.py  apple_music.py  callback.py  inline.py  owner.py  snap.py  song.py  start.py  youtube.py  yt_dlp.py  yt_dlp.txt
src/utils/: __init__.py  _api.py  _cache.py  _dataclass.py  _db.py  _downloader.py  _filters.py  regex.py
