[project]
name = "sptubebot"
version = "0.1.0"
description = "A high-performance Telegram bot for downloading songs from Spotify, SoundCloud, Apple Music and YouTube in premium quality."
requires-python = ">=3.13"
dependencies = [
    "httpx~=0.28.1",
    "meval~=2.5",
    "mutagen>=1.47.0",
    "orjson~=3.11.5",
    "pycryptodome~=3.23.0",
    "pydantic~=2.12.5",
    "pymongo~=4.15.5",
    "pytdbot==0.9.9",
    "tdjson==1.8.58.post2",
    "ujson~=5.11.0",
    "yt-dlp~=2025.12.8",
    "python-decouple~=3.8",
]

[project.license]
file = "LICENSE"

[project.scripts]
start = "src.__main__:main"

[tool.uv]
package = true

[tool.setuptools]
packages = [
    "src",
]
