[project]
name = "sptubebot"
version = "0.1.0"
description = "A high-performance Telegram bot for downloading songs from Spotify, SoundCloud, Apple Music and YouTube in premium quality."
requires-python = ">=3.13"
dependencies = [
    "httpx~=0.28.1",
    "meval~=2.5",
    "mutagen>=1.47.0",
    "orjson~=3.11.7",
    "pycryptodome~=3.23.0",
    "pydantic~=2.12.5",
    "pymongo~=4.16.0",
    "pytdbot==0.9.10.dev0",
    "tdjson==1.8.61",
    "ujson~=5.11.0",
    "yt-dlp~=2026.2.21",
    "python-decouple~=3.8",
]

[project.license]
file = "LICENSE"

[project.scripts]
start = "src.__main__:main"

[tool.uv]
package = true

[tool.uv.sources.pytdbot]
git = "https://github.com/pytdbot/client"
rev = "main"

[tool.setuptools]
packages = [
    "src",
]
