[project]
name = "sptubebot"
version = "0.1.0"
description = "A high-performance Telegram bot for downloading songs from Spotify, SoundCloud, Apple Music and YouTube in premium quality."
requires-python = ">=3.13"
dependencies = [
    "httpx~=0.28.1",
    "meval~=2.5",
    "mutagen>=1.47.0",
    "orjson~=3.11.8",
    "pycryptodome~=3.23.0",
    "pydantic~=2.13.3",
    "pymongo~=4.17.0",
    "pytdbot==0.10.0.dev0",
    "tdjson==1.8.63",
    "ujson~=5.12.0",
    "yt-dlp~=2026.3.17",
    "python-decouple~=3.8",
]

[project.license]
file = "LICENSE"

[project.scripts]
start = "src.__main__:main"

[tool.uv]
package = true

[tool.uv.sources.pytdbot]
git = "https://github.com/pytdbot/client"
rev = "main"

[tool.setuptools]
packages = [
    "src",
]
